/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 Khoi Vu
 */

package baseline;

public class EditEvent
{
    public void edit()
    {
        //allow the user to select the specific event row
        //allow the user to set the name and description and date to something else
    }
}
