package baseline;


public class FilterList
{
    public void filterComplete()
    {
        //filter the list to have only rows that are checked by the check box
    }

    public void filterIncomplete()
    {
        //filter the list to have only rows that are unchecked
    }
}
