/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 Khoi Vu
 */

package baseline;

import java.io.File;

public class MakeNewList
{
    public File newList()
    {
        //make a new list that is empty
        //return the empty list to the driver class
        return new File("data/");
    }
}
