/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 Khoi Vu
 */

package baseline;

import javafx.collections.ObservableList;


public class RemoveEvent
{

    public void remove()
    {
        //initialize an observable list for all events in list and a single event in the list
        ObservableList<AddEvent> allEvents;
        ObservableList<AddEvent> singleEvent;

        //Get events stored in table view and store them into the allEvents variable

        //store the selected event into the single event variable

        //remove the event from allEvent
    }
}
