/*
 *  UCF COP3330 Summer 2021 Application Assignment 1 Solution
 *  Copyright 2021 Khoi Vu
 */

package baseline;


import java.io.BufferedWriter;
import java.io.File;

public class SaveList
{
    public void save()
    {
        //save file
        File file = new File("data/");
        //if file does not exist allow user to save as a new file
        //use try catch and a buffered writer to save the file


    }
}
